<resources>
    <string name="app_name">DnD Rules Lawyer</string>
    <string name="search_hint">Ask for a rule&#8230;</string>
    <string name="loading_indicator">Loading</string>
    <string name="loading_screen">Loading screen</string>
    <string name="search_empty_prompt">Enter a query to search for resources.</string>
    <string name="search_no_results">No results matched your search.</string>
    <string name="voice_input">Voice input</string>
    <string name="voice_permission_denied">Microphone permission is required for voice input.</string>
    <string name="search_results_error">Could not search rules.</string>
    <string name="rule_result_meta">%1$s - %2$s</string>
    <string name="favorite_add">Add favorite</string>
    <string name="favorite_remove">Remove favorite</string>
    <string name="favorite_added">Favorite added.</string>
    <string name="favorite_removed">Favorite removed.</string>
    <string name="favorite_update_failed">Could not update favorite.</string>
    <string name="favorites_add_button">Add favorite</string>
    <string name="favorites_add_hint">Search resources to favorite</string>
    <string name="favorites_title">Favorites</string>
    <string name="settings_title">Settings</string>
    <string name="settings_dark_mode">Dark mode</string>
    <string name="settings_reload_official_resources">Reload official resources</string>
    <string name="settings_reload_official_resources_done">Official resources reloaded.</string>
    <string name="settings_reload_official_resources_failed">Could not reload all official resources.</string>
    <string name="edit_resource">Edit</string>
    <string name="edit_resource_failed">Could not edit resource.</string>
    <string name="delete_resource">Delete</string>
    <string name="delete_resource_confirm_title">Delete resource?</string>
    <string name="delete_resource_confirm_message">This custom resource will be removed from your app.</string>
    <string name="delete_resource_failed">Could not delete resource.</string>
    <string name="linked_resource_missing">Could not open linked resource.</string>
    <string name="speech_error_failed">Speech recognition failed. Please try again.</string>
    <string name="speech_error_none">No speech recognized</string>
    <string name="speech_error_unavailable">Speech recognition is not available on this device.</string>
    <string name="filter_spells">Spells</string>
    <string name="filter_monsters">Monsters</string>
    <string name="filter_classes">Classes</string>
    <string name="filter_equipment">Equipment</string>
    <string name="filter_races">Races</string>
    <string name="filter_rules">Rules</string>
    <string name="filter_spell_cantrip">Cantrip</string>
    <string name="filter_spell_level">Level %1$d</string>
    <string name="filter_other">Other</string>
    <string name="filter_monster_cr_range">Challenge rating</string>
    <string name="filter_monster_cr_range_value">Challenge rating: %1$s - %2$s</string>
    <string name="filter_class">Class</string>
    <string name="filter_subclass">Subclass</string>
    <string name="filter_subrace">Subrace</string>
    <string name="filter_equipment_weapons">Weapons</string>
    <string name="filter_equipment_armor">Armor</string>
    <string name="filter_equipment_adventuring_gear">Adventuring Gear</string>
    <string name="filter_equipment_tools">Tools</string>
    <string name="filter_equipment_mounts_vehicles">Mounts &amp; Vehicles</string>
    <string name="filter_equipment_magic_items">Magic Items</string>
    <string name="filter_equipment_weapon_properties">Weapon Properties</string>
    <string name="filter_equipment_categories">Categories</string>
    <string name="filter_rule_sections">Rule Sections</string>
    <string name="filter_languages">Languages</string>
    <string name="filter_magic_schools">Magic Schools</string>
    <string name="filter_conditions">Conditions</string>
    <string name="filter_damage_types">Damage Types</string>
    <string name="filter_ability_scores">Ability Scores</string>
    <string name="filter_alignments">Alignments</string>
    <string name="filter_skills">Skills</string>
    <string name="filter_proficiencies">Proficiencies</string>
    <string name="filter_feats">Feats</string>
    <string name="filter_features">Features</string>
    <string name="filter_traits">Traits</string>
    <string name="filter_backgrounds">Backgrounds</string>
    <string name="nav_search">Search</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_add_resource">Add resource</string>
    <string name="nav_settings">Settings</string>
    <string name="create_resource_save">Save resource</string>
    <string name="create_resource_name_hint">Name</string>
    <string name="create_resource_description_hint">Short description</string>
    <string name="create_resource_homebrewery_url_hint">Homebrewery share link</string>
    <string name="create_resource_body_hint">Details</string>
    <string name="create_resource_name_required">Name is required.</string>
    <string name="create_resource_homebrewery_url_required">Homebrewery share link is required.</string>
    <string name="create_resource_body_required">Details are required.</string>
    <string name="create_resource_validation_error">Please fill in the required fields.</string>
    <string name="create_spell_level_hint">Spell level, 0-9</string>
    <string name="create_spell_school_hint">School</string>
    <string name="create_reference_link">Link</string>
    <string name="create_reference_link_school">Link school</string>
    <string name="create_reference_link_damage_type">Link damage type</string>
    <string name="create_reference_link_classes">Link classes</string>
    <string name="create_reference_link_subclasses">Link subclasses</string>
    <string name="create_spell_casting_time_hint">Casting time</string>
    <string name="create_spell_range_hint">Range</string>
    <string name="create_spell_components_hint">Components, comma separated</string>
    <string name="create_spell_component_verbal">V</string>
    <string name="create_spell_component_somatic">S</string>
    <string name="create_spell_component_material">M</string>
    <string name="create_spell_material_hint">Material components</string>
    <string name="create_spell_ritual">Ritual</string>
    <string name="create_spell_concentration">Concentration</string>
    <string name="create_spell_duration_hint">Duration</string>
    <string name="create_spell_attack_type_hint">Attack type, e.g. ranged</string>
    <string name="create_spell_save_ability_hint">Saving throw ability, e.g. DEX</string>
    <string name="create_spell_save_success_hint">Save success, e.g. half</string>
    <string name="create_spell_damage_type_hint">Damage type, e.g. Fire</string>
    <string name="create_spell_damage_scaling_hint">Tap to edit damage by slot level</string>
    <string name="create_spell_healing_scaling_hint">Tap to edit healing by slot level</string>
    <string name="create_spell_area_type_hint">Area type</string>
    <string name="create_spell_area_size_hint">Area size</string>
    <string name="create_spell_classes_hint">Classes, comma separated</string>
    <string name="create_spell_subclasses_hint">Subclasses, comma separated</string>
    <string name="create_spell_description_hint">Spell description</string>
    <string name="create_spell_higher_level_hint">At higher levels</string>
    <string name="create_spell_level_required">Enter a spell level from 0 to 9.</string>
    <string name="create_spell_description_required">Spell description is required.</string>
    <string name="create_resource_mode_custom">Custom</string>
    <string name="create_resource_mode_homebrewery">Homebrewery</string>
    <string name="create_monster_ac_hint">Armor Class</string>
    <string name="create_monster_hp_hint">Hit Points</string>
    <string name="create_monster_hit_dice_hint">Hit Dice, e.g. 7d8 + 14</string>
    <string name="create_monster_speed_hint">Speed, e.g. walk=30 ft., fly=60 ft.</string>
    <string name="create_monster_abilities_hint">Abilities, STR,DEX,CON,INT,WIS,CHA</string>
    <string name="create_monster_traits_hint">Traits, one per block: Name: description</string>
    <string name="create_monster_actions_hint">Actions, one per block: Name: description</string>
    <string name="create_monster_abilities_required">Enter six ability scores.</string>
    <string name="create_monster_image_url_hint">Image URL</string>
    <string name="create_monster_size_hint">Size, e.g. Large</string>
    <string name="create_monster_type_hint">Type, e.g. dragon</string>
    <string name="create_monster_alignment_hint">Alignment, e.g. chaotic evil</string>
    <string name="create_monster_proficiencies_hint">Tap to edit proficiencies</string>
    <string name="create_monster_damage_vulnerabilities_hint">Damage vulnerabilities, comma separated</string>
    <string name="create_monster_damage_resistances_hint">Damage resistances, comma separated</string>
    <string name="create_monster_damage_immunities_hint">Damage immunities, comma separated</string>
    <string name="create_monster_condition_immunities_hint">Condition immunities, comma separated</string>
    <string name="create_monster_senses_hint">Senses, e.g. passive Perception=14, darkvision=60 ft.</string>
    <string name="create_monster_languages_hint">Languages</string>
    <string name="create_monster_challenge_rating_hint">Challenge rating, e.g. 5 or 1/2</string>
    <string name="create_monster_xp_hint">XP</string>
    <string name="create_monster_reactions_hint">Reactions, one per block: Name: description</string>
    <string name="create_monster_legendary_actions_hint">Legendary actions, one per block: Name: description</string>
    <string name="create_reference_link_condition_immunities">Link condition immunities</string>
    <string name="create_class_hit_die_hint">Hit die, e.g. 8</string>
    <string name="create_class_saving_throws_hint">Saving throws, comma separated</string>
    <string name="create_class_proficiencies_hint">Proficiencies, comma separated</string>
    <string name="create_class_proficiency_choices_hint">Proficiency choices, one per line</string>
    <string name="create_class_starting_equipment_hint">Tap to edit starting equipment</string>
    <string name="create_class_starting_equipment_options_hint">Starting equipment choices, one per line</string>
    <string name="create_class_subclasses_hint">Subclasses, comma separated</string>
    <string name="create_class_spellcasting_info_hint">Spellcasting info, one block: Name: description</string>
    <string name="create_class_levels_hint">Tap to edit class levels</string>
    <string name="create_class_features_hint">Tap to edit class features</string>
    <string name="create_class_hit_die_required">Enter a valid hit die.</string>
    <string name="create_class_levels_required">Enter at least one class level.</string>
    <string name="create_reference_link_class_subclasses">Link class subclasses</string>
    <string name="create_reference_link_subclass_class">Link subclass class</string>
    <string name="create_subclass_class_hint">Class</string>
    <string name="create_subclass_flavor_hint">Subclass flavor, e.g. Roguish Archetype</string>
    <string name="create_subclass_description_hint">Subclass description</string>
    <string name="create_subclass_levels_hint">Tap to edit subclass levels</string>
    <string name="create_subclass_features_hint">Tap to edit subclass features</string>
    <string name="create_subclass_spells_hint">Tap to edit subclass spells</string>
    <string name="create_subclass_description_required">Subclass description is required.</string>
    <string name="create_reference_link_feature_class">Link class</string>
    <string name="create_reference_link_feature_subclass">Link subclass</string>
</resources>